--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,54 @@
 :root{
     font-size: 12px;
 }
+
+/* *********************** MAIN PLAYER ******************** */
+
+.main-player{
+    height: 90px;
+    width: 100%;
+    background-color: #282828;
+    padding: 0 15px;
+    position: absolute;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.current-song{
+    height: 80%;
+    width: calc(100% / 3);
+    /* DEBUG */
+    background-color: red;
+}
+.commands{
+    height: 80%;
+    width: calc(100% / 3);
+    flex-grow: 1;
+    color: white;
+    /* DEBUG */
+    /* background-color: rgb(0, 255, 42); */
+}
+.minor-commands{
+    height: 80%;    
+    width: calc(100% / 3);
+    /* DEBUG */    
+    background-color: red;
+}
+.commands-row-buttons{
+    display: flex;
+    align-items: center;
+}
+.current-song-line{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.progress-line{
+    background-color: #5A5A5A;
+    height: 10px;
+    width: 100px;
+    display: flex;
+    flex-grow: 1;
+}
