--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@
 figcaption{
     text-align: center;
 }
-
+a{
+    cursor: pointer;
+}
 
 
 /* ******************** CALL TO ACTION **************** */
@@ -33,9 +35,13 @@ figcaption{
     justify-content: flex-end;
     align-items: center;
 }
+.call-to-action a{
+    text-decoration: none;
+
+}
 
 #cta-button{
-    font-size: 1.2em;
+    font-size: 1.1em;
     text-decoration: none;
     color: white;
     padding: 15px 45px;
@@ -106,7 +112,6 @@ li a{
 #plus-playlist{
     margin: 15px 5px 15px 0;
     font-size: 1.5em;
-    cursor: pointer;
     display: flex;
     align-items: center;
     text-align: start;
@@ -138,7 +143,6 @@ ol {
 .sidebar-download, .sidebar-profile{
     display: flex;
     align-items: center;
-    cursor: pointer;
 }
 .sidebar-download img, .sidebar-profile img{
     height: 20px;
@@ -161,7 +165,7 @@ ol {
 
 
 
-/* ************************MAIN SECTION************* */
+/* ************************MAIN SECTION pt1************* */
 .main-section{
     height: calc(100vh - 90px);
     width: calc(100vw - 250px);
@@ -205,7 +209,7 @@ nav > div{
     align-items: center;
 }
 
-/* ************************MAIN SECTION************* */
+/* ************************MAIN SECTION pt2************* */
 
 .main-container h1{
     font-size: 25px;
@@ -227,16 +231,31 @@ nav > div{
 }
 .album-name{
     font-weight: bold;
-    /* font-size: 1.6em; */
 }
 .song-name{
     font-weight: bold;
-    /* font-size: 1.1em; */
     color: #818181;
 }
 .song-cover{
     margin-bottom: 10px;
+    position: relative;
+}
+.song-cover-art{
     width: 100%;
+}
+#play-hover{
+    font-size: 55px;
+    color: white;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    display: flex;
+    background: rgba(0, 0, 0, 0.4);
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+    display: none;
 }
 #subtitle-main-row{
     color: #818181;
@@ -260,7 +279,6 @@ nav > div{
 
 
 /* *********************** MAIN PLAYER ******************** */
-
 .main-player{
     height: 90px;
     width: 100%;
@@ -301,7 +319,6 @@ nav > div{
 }
 .current-song-title{
     font-size: 16px;
-    text-decoration: underline;
 }
 .current-song-name{
     font-size: 12px;
@@ -374,10 +391,16 @@ nav > div{
 
 
 /* *********************** HOVERS ******************** */
-#cta-button:hover span{
-    font-size: 1.1em;
+
+#song-box:hover #play-hover{
+    display: flex;
 }
-a:hover{
+.call-to-action a:hover{
+    transform-origin: center center;
+    transform: scale(1.05);
+}
+
+a:hover, .current-song a .fa-regular:hover{
     color: white;
 }
 
